--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 
 <body>
-  <div class="video-bg flex items-center justify-center h-screen">
+  <div class="video-bg flex items-center justify-center min-h-screen">
     <video src="landscape.mp4" loop autoplay muted preload="none" playsinline
       class="absolute top-0 left-0 w-full h-full object-cover"></video>
     <div class="absolute top-0 left-0 w-full h-full bg-black opacity-75"></div>
-    <div class="flex flex-col justify-center items-center h-full text-white relative">
+    <div class="flex flex-col justify-center items-center h-full text-white relative px-6 md:px-12 lg:px-24">
       <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-8">HAZE</h1>
-      <p class="text-lg mb-12">Discover the latest beats and sounds.</p>
-      <div class="flex gap-4">
+      <p class="text-lg text-center mb-12">Discover the latest beats and sounds.</p>
+      <div class="flex flex-col gap-4 md:flex-row">
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
           onclick="showContent('home')">HOME</a>
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
@@ -36,7 +36,7 @@
       </div>
       <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="music-content">
         <h2 class="text-xl font-bold mb-4">Check out our latest music releases!</h2>
-        <div class="flex gap-4">
+        <div class="flex flex-col gap-4 md:flex-row">
           <a href="https://www.youtube.com/@Haze.records" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-red-500 hover:bg-red-600 text-black hover:text-white transition-all duration-300">YouTube</a>
           <a href="https://open.spotify.com/intl-pt/track/6joY9Y2dYk1vmmQZmvfGz6" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300">Spotify</a>
         </div>
