--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link href="https://db.onlinewebfonts.com/c/d2639bbd2646a188110e8270ec817322?family=GAMECUBEN+DualSet" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     @media (max-width: 640px) {
       .video-bg {
@@ -23,7 +24,7 @@
       .btn-container {
         flex-direction: column;
       }
-    }
+  
   </style>
 </head>
 
@@ -52,9 +53,9 @@
       </div>
       <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="music-content">
         <h2 class="text-xl font-bold mb-4">Check out our latest music releases!</h2>
-        <div class="flex gap-4 md:flex-row flex-col btn-container">
+        <div class="flex gap-4 md:flex-row flex-col btn-container justify-center">
           <a href="https://www.youtube.com/@Haze.records" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-red-500 hover:bg-red-600 text-black hover:text-white transition-all duration-300">YouTube</a>
-          <a href="https://open.spotify.com/intl-pt/track/6joY9Y2dYk1vmmQZmvfGz6" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300">Spotify</a>
+          <a href="https://open.spotify.com/intl-pt/track/6joY9Y2dYk1vmmQZmvfGz6" class="btn btn-primary text-lg px-8 py-3300">Spotify</a>
         </div>
       </div>
       <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="sample-packs-content">
@@ -68,6 +69,32 @@
     </div>
   </div>
 
+  <footer class="bg-black text-white py-4 absolute bottom-0 w-full">
+    <div class="container mx-auto px-6">
+      <div class="footer-content flex flex-wrap justify-between">
+        <div class="w-full md:w-1/3 text-center md:text-left mb-4 md:mb-0">
+          <h4 class="text-lg font-bold">Contact Us</h4>
+          <p>Email: hazerecordspt@gmail.com</p>
+          <!-- Add more contact information here if needed -->
+        </div>
+        <div class="w-full md:w-1/3 text-center mb-4 md:mb-0">
+          <h4 class="text-lg font-bold">Follow Us</h4>
+          <div class="flex justify-center md:justify-start mt-2 footer-icons">
+            <!-- Font Awesome Icons for social media -->
+            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-facebook"></i></a>
+            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-twitter"></i></a>
+            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-instagram"></i></a>
+            <a href="#" class="text-white hover:text-gray-400"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+        
+      </div>
+      <div class="text-center mt-4">
+        <p class="text-sm text-gray-400">All rights reserved &copy; 2023 Haze Music Label</p>
+      </div>
+    </div>
+  </footer>
+
   <script>
     function showContent(contentType) {
       const contentElements = document.getElementsByClassName('content');
@@ -78,6 +105,7 @@
       selectedContent.style.display = 'block';
     }
   </script>
+
 </body>
 
 </html>
