--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
       .btn-container {
         flex-direction: column;
       }
-  
+    }
   </style>
 </head>
 
 <body>
   <div class="video-bg flex items-center justify-center min-h-screen">
-    <video src="landscape.mp4" loop autoplay muted preload="none" playsinline
-      class="absolute top-0 left-0 w-full h-full object-cover"></video>
+    <video src="landscape.mp4" loop autoplay muted preload="none" playsinline class="absolute top-0 left-0 w-full h-full object-cover"></video>
     <div class="absolute top-0 left-0 w-full h-full bg-black opacity-75"></div>
     <div class="flex flex-col justify-center items-center h-full text-white relative px-6 md:px-12 lg:px-24">
       <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-8">HAZE</h1>
@@ -54,8 +53,14 @@
       <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="music-content">
         <h2 class="text-xl font-bold mb-4">Check out our latest music releases!</h2>
         <div class="flex gap-4 md:flex-row flex-col btn-container justify-center">
-          <a href="https://www.youtube.com/@Haze.records" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-red-500 hover:bg-red-600 text-black hover:text-white transition-all duration-300">YouTube</a>
-          <a href="https://open.spotify.com/intl-pt/track/6joY9Y2dYk1vmmQZmvfGz6" class="btn btn-primary text-lg px-8 py-3300">Spotify</a>
+          <a href="https://open.spotify.com/intl-pt/track/6joY9Y2dYk1vmmQZmvfGz6" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-600 hover:bg-green-700 text-white hover:text-black transition-all duration-300">
+            <i class="fab fa-spotify mr-2"></i>
+            Spotify
+          </a>
+          <a href="https://www.youtube.com/@Haze.records" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-red-600 hover:bg-red-700 text-white hover:text-black transition-all duration-300">
+            <i class="fab fa-youtube mr-2"></i>
+            YouTube
+          </a>
         </div>
       </div>
       <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="sample-packs-content">
@@ -87,7 +92,6 @@
             <a href="#" class="text-white hover:text-gray-400"><i class="fab fa-youtube"></i></a>
           </div>
         </div>
-        
       </div>
       <div class="text-center mt-4">
         <p class="text-sm text-gray-400">All rights reserved &copy; 2023 Haze Music Label</p>
