--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="flex flex-col justify-center items-center h-full text-white relative px-6 md:px-12 lg:px-24">
       <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-8">HAZE</h1>
       <p class="text-lg text-center mb-12">Discover the latest beats and sounds.</p>
-      <div class="flex gap-4 md:flex-row flex-col btn-container">
+      <div class="flex gap-4 md:flex-row flex-col btn-container justify-center items-center">
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
           onclick="showContent('home')">HOME</a>
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
@@ -67,37 +67,29 @@
         <h2 class="text-xl font-bold mb-4">Explore our sample packs collection!</h2>
         <p>SAMPLE PACKS SOON HERE AND ON BEATSTARS, BANDCAMP</p>
       </div>
-      <div class="content hidden mt-8 p-4 border border-white rounded-lg max-w-md" id="contacts-content">
-        <h2 class="text-xl font-bold mb-4">Get in touch with us!</h2>
-        <p>hazerecordspt@gmail.com</p>
-      </div>
     </div>
   </div>
 
-  <footer class="bg-black text-white py-4 absolute bottom-0 w-full">
-    <div class="container mx-auto px-6">
-      <div class="footer-content flex flex-wrap justify-between">
-        <div class="w-full md:w-1/3 text-center md:text-left mb-4 md:mb-0">
-          <h4 class="text-lg font-bold">Contact Us</h4>
-          <p>Email: hazerecordspt@gmail.com</p>
-          <!-- Add more contact information here if needed -->
+  <footer class="bg-black text-white py-2 sm:py-4 absolute bottom-0 w-full">
+  <div class="container mx-auto px-6">
+    <div class="footer-content flex flex-wrap justify-center items-center">
+      <div class="w-full text-center sm:text-left mb-2 sm:mb-0">
+        <h4 class="text-lg font-bold">Follow Us</h4>
+        <div class="flex justify-center sm:justify-start mt-2 footer-icons">
+          <!-- Font Awesome Icons for social media -->
+          <a href="#" class="text-white mr-2 hover:text-gray-400"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="text-white mr-2 hover:text-gray-400"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="text-white mr-2 hover:text-gray-400"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="text-white hover:text-gray-400"><i class="fab fa-youtube"></i></a>
         </div>
-        <div class="w-full md:w-1/3 text-center mb-4 md:mb-0">
-          <h4 class="text-lg font-bold">Follow Us</h4>
-          <div class="flex justify-center md:justify-start mt-2 footer-icons">
-            <!-- Font Awesome Icons for social media -->
-            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-facebook"></i></a>
-            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="text-white mr-4 hover:text-gray-400"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-white hover:text-gray-400"><i class="fab fa-youtube"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="text-center mt-4">
-        <p class="text-sm text-gray-400">All rights reserved &copy; 2023 Haze Music Label</p>
       </div>
     </div>
-  </footer>
+    <div class="text-center mt-2 sm:mt-4">
+      <p class="text-xs sm:text-sm text-gray-400">All rights reserved &copy; 2023 Haze Music Label</p>
+    </div>
+  </div>
+</footer>
+
 
   <script>
     function showContent(contentType) {
