--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
           onclick="showContent('music')">MUSIC</a>
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
-          onclick="showContent('sample-packs')">SAMPLE PACKS</a>
+          onclick="showContent('sample-packs')">SAMPLES</a>
         <a href="#" class="btn btn-primary text-lg px-8 py-3 rounded-full bg-green-500 hover:bg-green-600 text-black hover:text-white transition-all duration-300"
           onclick="showContent('contacts')">CONTACTS</a>
       </div>
