--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
     /* Additional CSS styles, if any */
-	  
-	   @media (max-width: 640px) {
+    /* Add any custom styles here */
+
+    @media (max-width: 640px) {
       .video-bg {
         height: auto;
       }
@@ -27,8 +28,6 @@
         flex-direction: column;
       }
     }
-	  
-    /* Add any custom styles here */
   </style>
 </head>
 
@@ -98,7 +97,7 @@
   </footer>
 
   <script>
-    // Function to show content based on the button clicked
+    // Function to handle content display
     function showContent(contentType) {
       const contentElements = document.getElementsByClassName('content');
       for (let i = 0; i < contentElements.length; i++) {
@@ -108,7 +107,6 @@
       selectedContent.style.display = 'block';
     }
   </script>
-
 </body>
 
 </html>
